# ofx2csv

./: pyproject.toml
tests/: test_ofx2csv.py
