[tool.poetry]
name = "ofx2csv"
version = "0.1.0"
description = ""
authors = ["Tim Bradt <tjbradt@mtu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
ofxparse = "^0.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
